Amélioration readme pour portfolio